# Test_Case_Generator

./: README.md  pyproject.toml  report.md  test_cases.json
src/testcase_writter/: crew.py  main.py
src/testcase_writter/config/: agents.yaml  tasks.yaml
