[project]
name = "testcase_writter"
version = "0.1.0"
description = "testcase_writter using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
testcase_writter = "testcase_writter.main:run"
run_crew = "testcase_writter.main:run"
train = "testcase_writter.main:train"
replay = "testcase_writter.main:replay"
test = "testcase_writter.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
